# 291--Projcet-2

./: Project2-Camera.py  README.md  Roboy Brain New  robot-core.c
CameraWebServer/: CameraWebServer.ino
controller/: CMakeLists.txt  CONTROL_SCHEME.md  IR_PROTOCOL.md  board_config.h  compile.sh  controller.c  ir_rc5.c  ir_rc5.h  joystick.c  joystick.h  lcd.c  lcd.h  upload.sh  xc32-toolchain.cmake
shared/: ir_rc5.h
test_robot_path/: field_tracking.c  follow_wire_diff.c  test_readings.c  test_robot_preconfigured_path.c
